ToastBlaze/client/main.css
/* CSS declarations go here */

.text-white { color: #FFF; }

.text-acuere-grey {color: #8e9299;}

.bg-acuere-dark {background: #393C40}

.bg-acuere-grey {background: #F5F6F6}

.bg-acuere-light {background: #FFFFFF}

.aaa-dev-tools {
    visibility: visible;
}

.mainContentDiv{
    margin-left: 20px;
    padding-top: 5px;
    padding-left: 1px;
}
.col-centered{
    float: none;
    margin: 0 auto;
}
.shrinkWrap{
    margin-left: 20px;
    margin-right: 20px;
}
.medListItem{
    padding-top: 4px;
    padding-bottom: 4px;
}
a {
    color: #393C40;
    text-decoration: none;
}

#titleWrapper{
 padding-left: 55px;
    padding-top: 12px;
}

#toastIcon{
margin-top: -10px;
}

#ToastTitle {
    font-size: 2em;
}

#ToastSubtitle{
    font-size: 1.2em;
    padding-left: 20px;
}

#sidebar {
    float:left;
    width:50px;
    height:100vh;
}
#content {
    margin: 0 0 0 0px;
}

.header{
    height:71px;
}

#mainMenuWrapper{
    padding-top: 8px;
    padding-right: 10px;
}

blockquote, blockquote p {
    font-size: 14px;
}

